Repair Rating style

--- a/css/app.css
+++ b/css/app.css
@@ -99,11 +99,14 @@ h1 {
     padding: 0;
     display: inline-block;
     margin: 0 5px 0 0;
+    width: 25%;
+    text-align: right;
 }
 
 .score-panel .stars li {
     list-style: none;
     display: inline-block;
+    color: yellow;
 }
 
 .score-panel .restart {
