--- a/css/app.css
+++ b/css/app.css
@@ -27,11 +27,21 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 95%;
+    min-width: 300px;
+    margin: auto;
+}
+
+header {
+    width: 100%;
+    text-align: center;
 }
 
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
+    margin: 10px auto 10px;
+    font-size: 2.6em;
 }
 
 
@@ -40,8 +50,8 @@ h1 {
  */
 
 .deck {
-    width: 660px;
-    min-height: 680px;
+    width: 100%;
+    min-height: 320px;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
     padding: 32px;
     border-radius: 10px;
@@ -54,8 +64,13 @@ h1 {
 }
 
 .deck .card {
-    height: 125px;
-    width: 125px;
+    /* min-height: 90px; */
+    width: calc((100% - 30px)/4);
+    min-width: 50px;
+    height: 22%;
+    height: calc((100% - 30px)/4);
+    min-height: 50px;
+    /* margin: 2% 2%; */
     background: #2e3d49;
     font-size: 0;
     color: #ffffff;
@@ -91,6 +106,10 @@ h1 {
     animation-duration: .75s;
 }
 
+.card .fa {
+    font-size: 50%;
+}
+
 
 /*
  * Styles for the Score Panel
@@ -98,8 +117,11 @@ h1 {
 
 .score-panel {
     text-align: left;
-    width: 345px;
+    width: 100%;
     margin-bottom: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    /* font-size: 2.5em; */
 }
 
 .score-panel .stars {
@@ -107,8 +129,8 @@ h1 {
     padding: 0;
     display: inline-block;
     margin: 0 5px 0 0;
-    width: 25%;
-    text-align: right;
+    width: 100%;
+    text-align: center;
 }
 
 .score-panel .stars li,
@@ -116,18 +138,29 @@ h1 {
     list-style: none;
     display: inline-block;
     color: yellow;
+    font-size: 2em;
 }
 
 .score-panel .restart {
-    float: right;
+    /* float: right; */
     cursor: pointer;
+    font-size: 1.5em;
+    width: 20%;
+    text-align: center;
+}
+
+.score-panel h2 {
+    text-align: center;
+    margin: 0 auto 10px;
+    font-size: 2em;
 }
 
 .timer,
 .moves {
-    font-size: 18px;
-    padding-left: 10px;
-    width: 20%;
+    font-size: 1.5em;
+    /* padding-left: 10px; */
+    width: 40%;
+    text-align: center;
 }
 
 
@@ -153,28 +186,36 @@ h1 {
 }
 
 .popup {
-    margin: 20% auto;
+    margin: 10% auto;
     padding: 20px;
     background: #f7edc2;
     border-radius: 5px;
-    width: 55%;
-    /* max-width: 700px; */
+    display: flex;
+    flex-wrap: wrap;
+    width: 85%;
+    max-width: 350px;
     position: relative;
     transition: all 5s ease-in-out;
     font-family: 'Gloria Hallelujah', cursive;
 }
 
 .popup h2 {
-    margin-top: 0;
-    color: #396;
+    margin-top: 20px;
+    color: rgb(30, 81, 252);
     font-family: Tahoma, Arial, sans-serif;
     text-align: center;
+    font-size: 1.5em;
+    width: 100%;
+}
+
+.popup p {
+    font-size: 1.5em;
 }
 
 .popup .close {
     position: absolute;
-    top: 20px;
-    right: 30px;
+    top: 5px;
+    right: 10px;
     transition: all 200ms;
     font-size: 30px;
     font-weight: bold;
@@ -191,6 +232,7 @@ h1 {
     max-height: 30%;
     overflow: auto;
     text-align: center;
+    width: 100%;
 }
 
 .show {
@@ -204,11 +246,10 @@ h1 {
 
 #play-again {
     background-color: #a7bad0;
-    padding: 0.7rem 1rem;
-    font-size: 1.1rem;
+    font-size: 1.8em;
     display: block;
-    margin: 0 auto;
-    width: 50%;
+    width: 100%;
+    margin: 0 15%;
     font-family: 'Gloria Hallelujah', cursive;
     color: #ffffff;
     border-radius: 5px;
@@ -267,3 +308,8 @@ h1 {
         transform: perspective(400px);
     }
 }
+
+
+/* -------------------------------------
+------------Media querries-----------
+-------------------------------------- */
