--- a/css/app.css
+++ b/css/app.css
@@ -29,6 +29,7 @@ body {
     flex-direction: column;
     width: 95%;
     min-width: 300px;
+    max-width: 600px;
     margin: auto;
 }
 
@@ -51,7 +52,7 @@ h1 {
 
 .deck {
     width: 100%;
-    min-height: 320px;
+    height: 320px;
     background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
     padding: 32px;
     border-radius: 10px;
@@ -64,12 +65,10 @@ h1 {
 }
 
 .deck .card {
-    /* min-height: 90px; */
     width: calc((100% - 30px)/4);
     min-width: 50px;
-    height: 22%;
-    height: calc((100% - 30px)/4);
-    min-height: 50px;
+    min-height: calc((100% - 30px)/4);
+    /* min-height: 50px; */
     /* margin: 2% 2%; */
     background: #2e3d49;
     font-size: 0;
@@ -186,7 +185,7 @@ h1 {
 }
 
 .popup {
-    margin: 10% auto;
+    margin: 50px auto;
     padding: 20px;
     background: #f7edc2;
     border-radius: 5px;
@@ -313,3 +312,18 @@ h1 {
 /* -------------------------------------
 ------------Media querries-----------
 -------------------------------------- */
+
+@media screen and (min-width: 450px) {
+    .deck {
+        width: 450px;
+        height: 420px;
+        border: 5px solid green;
+    }
+}
+
+@media screen and (min-width: 720px) {
+    .deck {
+        width: 600px;
+        height: 500px;
+    }
+}
